package com.calerts.computer_alertsbe.articleservice.dataaccesslayer;

public enum ArticleStatus {
    PUBLISHED,
    DRAFT,
    ARCHIVED
}
